<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloud_to_depth</name>
  <version>1.0.0</version>
  <description>Point Cloud to Depth Image</description>
  <maintainer email="ronca.pat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>pcl_conversions</depend>
  <depend>rosidl_default_generators</depend>
  <depend>libpcl-all-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_common</depend>
  <depend>libopencv-dev</depend>
  <depend>native_adapters</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
